Add @testing-library/react to testing React

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "module": "esnext",
     "jsx": "react",
     "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
   }
 }
