--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "start": "webpack serve --open --hot",
-    "build": "webpack --mode production --progress --hide-modules",
+    "build": "webpack --mode production && react-snap",
     "test": "jest",
     "types": "tsc --noEmit",
     "lint": "eslint"
@@ -15,6 +15,9 @@
     "url": "git+https://github.com/cyntler/personal-frontend.git"
   },
   "author": "cyntler",
+  "reactSnap": {
+    "source": "dist"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
@@ -29,6 +32,7 @@
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
+    "react-snap": "^1.23.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
