--- a/package.json
+++ b/package.json
@@ -3,20 +3,17 @@
   "version": "1.0.0",
   "description": "My personal website.",
   "private": true,
-  "scripts": {
-    "start": "webpack serve --open --hot",
-    "build": "webpack --mode production && react-snap",
-    "test": "jest",
-    "types": "tsc --noEmit",
-    "lint": "eslint"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cyntler/personal-frontend.git"
   },
   "author": "cyntler",
-  "reactSnap": {
-    "source": "dist"
+  "scripts": {
+    "start": "webpack serve",
+    "build": "rimraf dist && webpack --mode production && react-snap",
+    "test": "jest",
+    "types": "tsc --noEmit",
+    "lint": "eslint"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -28,11 +25,13 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "react-snap": "^1.23.0",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
@@ -46,5 +45,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.2.1"
+  },
+  "reactSnap": {
+    "source": "dist"
   }
 }
