--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,9 @@
   },
   "plugins": ["react", "@typescript-eslint"],
   "rules": {
-    "react/react-in-jsx-scope": 0
+    "no-undef": 0,
+    "react/react-in-jsx-scope": 0,
+    "@typescript-eslint/no-var-requires": 0,
+    "@typescript-eslint/explicit-module-boundary-types": 0
   }
 }
