--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "author": "cyntler",
   "scripts": {
-    "start": "webpack serve",
+    "start": "webpack serve --open",
     "build": "rimraf dist && webpack --mode production && react-snap",
     "test": "jest",
     "types": "tsc --noEmit",
@@ -28,7 +28,7 @@
     "copy-webpack-plugin": "^7.0.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^4.5.1",
+    "html-webpack-plugin": "^5.0.0-beta.4",
     "jest": "^26.6.3",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
@@ -36,7 +36,7 @@
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^4.0.0-beta.0"
+    "webpack-dev-server": "^3.11.1"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
