--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   "rules": {
     "no-undef": 0,
     "react/react-in-jsx-scope": 0,
+    "react/prop-types": 0,
     "@typescript-eslint/no-var-requires": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0
   }
