--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@types/styled-components": "^5.1.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-intl": "^5.10.16",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   },
