--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
-    "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.1"
+    "webpack": "^5.16.0",
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@types/react": "^17.0.0",
@@ -49,7 +49,8 @@
     "react-icons": "^4.1.0",
     "react-intl": "^5.10.16",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-media-query": "^2.1.2"
   },
   "reactSnap": {
     "source": "dist"
