--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/parser": "^4.12.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^7.0.0",
+    "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
