--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "dotenv": "^8.2.0",
     "dotenv-webpack": "^6.0.0",
