Add support for absolute paths by ~

--- a/.babelrc
+++ b/.babelrc
@@ -8,5 +8,16 @@
       }
     ],
     "@babel/preset-typescript"
+  ],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "root": ["./"],
+        "alias": {
+          "~": "./src"
+        }
+      }
+    ]
   ]
 }
