--- a/package.json
+++ b/package.json
@@ -10,41 +10,40 @@
   "author": "cyntler",
   "scripts": {
     "start": "webpack serve --open",
-    "build": "rimraf dist && webpack --mode production && react-snap",
+    "build": "rimraf dist && webpack --config webpack.config.production.js && react-snap",
     "test": "jest",
+    "test:watch": "jest --watch",
     "types": "tsc --noEmit",
     "lint": "eslint"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@testing-library/react": "^11.2.3",
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
+    "@babel/preset-typescript": "^7.12.17",
+    "@testing-library/react": "^11.2.5",
     "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
     "copy-webpack-plugin": "^7.0.0",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^6.0.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.20.0",
     "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^5.0.0-beta.6",
+    "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.0",
-    "typescript": "^4.1.3",
-    "webpack": "^5.16.0",
-    "webpack-cli": "^4.4.0",
+    "ts-jest": "^26.5.1",
+    "typescript": "^4.1.5",
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.7",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@apollo/client": "^3.3.11",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.1",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
@@ -52,8 +51,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.1.0",
-    "react-intl": "^5.11.0",
+    "react-icons": "^4.2.0",
+    "react-intl": "^5.12.3",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "styled-media-query": "^2.1.2"
