--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,6 @@
     "skipLibCheck": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "baseUrl": "./",
-    "paths": {
-      "~/*": ["src/*"]
-    }
+    "resolveJsonModule": true
   }
 }
