--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "build": "rimraf dist && webpack --config webpack.config.production.js && react-snap",
     "test": "jest",
     "test:watch": "jest --watch",
-    "types": "tsc --noEmit",
-    "lint": "eslint"
+    "check-types": "tsc --noEmit",
+    "lint": "eslint ./ --ext=tsx,ts",
+    "prettier": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -33,6 +34,7 @@
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^5.2.0",
     "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
@@ -56,7 +58,8 @@
     "react-intl": "^5.12.3",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
-    "styled-media-query": "^2.1.2"
+    "styled-media-query": "^2.1.2",
+    "use-window-blur-change-title": "^1.0.0"
   },
   "reactSnap": {
     "source": "dist"
