--- a/package.json
+++ b/package.json
@@ -18,44 +18,45 @@
     "prettier": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
-    "@babel/preset-env": "^7.13.9",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-react": "^7.12.13",
     "@babel/preset-typescript": "^7.13.0",
     "@testing-library/react": "^11.2.5",
     "@testing-library/react-hooks": "^5.1.0",
-    "@types/jest": "^26.0.20",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@types/jest": "^26.0.22",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^8.0.0",
+    "copy-webpack-plugin": "^8.1.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-plugin-react": "^7.22.0",
-    "html-webpack-plugin": "^5.3.0",
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1",
+    "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.3",
+    "ts-jest": "^26.5.4",
     "typescript": "^4.2.3",
-    "webpack": "^5.24.3",
+    "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.11",
+    "@apollo/client": "^3.3.13",
     "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.1",
+    "@types/react-dom": "^17.0.3",
     "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.7",
-    "@types/styled-components": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "graphql": "^15.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-coming": "^1.0.0-alpha.3",
+    "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-intl": "^5.13.2",
+    "react-intl": "^5.13.5",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1",
     "styled-media-query": "^2.1.2",
