--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,10 +1,27 @@
-name: Production
+name: Production Deployment
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Check / Prettier
+        run: npm run prettier
+
+      - name: Check / TypeScript typings
+        run: npm run check-types
+
+      - name: Check / Lint
+        run: npm run lint
+
+      - name: Check / Tests
+        run: npm run test
+
   deploy:
     runs-on: ubuntu-latest
     steps:
@@ -16,8 +33,8 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
-          source: "."
-          target: "/var/personal-frontend"
+          source: '.'
+          target: '/var/personal-frontend'
 
       - name: Build the application and run by Docker
         uses: appleboy/ssh-action@master
