--- a/package.json
+++ b/package.json
@@ -18,46 +18,46 @@
     "prettier": "prettier --check 'src/**/*.{ts,tsx}'"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.12",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/react-hooks": "^5.1.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/react-hooks": "^5.1.1",
     "@types/jest": "^26.0.22",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^8.1.0",
+    "copy-webpack-plugin": "^8.1.1",
     "dotenv": "^8.2.0",
-    "eslint": "^7.22.0",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint": "^7.24.0",
+    "eslint-plugin-react": "^7.23.2",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "react-snap": "^1.23.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.4",
-    "typescript": "^4.2.3",
-    "webpack": "^5.28.0",
-    "webpack-cli": "^4.5.0",
+    "typescript": "^4.2.4",
+    "webpack": "^5.31.2",
+    "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@types/react-helmet": "^6.1.0",
+    "@types/react-helmet": "^6.1.1",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-coming": "^1.0.3",
     "react-dom": "^17.0.2",
-    "react-helmet-async": "^1.0.9",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-intl": "^5.13.5",
+    "react-intl": "^5.15.7",
     "react-router-dom": "^5.2.0",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "styled-media-query": "^2.1.2"
   },
   "reactSnap": {
