--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,4 +46,4 @@ jobs:
           script: |
             cd /var/personal-frontend
             docker build -t personal-frontend .
-            docker run -it -d -p 80:80 personal-frontend
+            docker run -it -d -p 80:80 -v /etc/letsencrypt/live/cyntler.com:/etc/letsencrypt/live/cyntler.com personal-frontend
