--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,26 @@
 server {
   listen 80;
+  listen [::]:80;
+  server_name cyntler.com www.cyntler.com;
+
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  server_name cyntler.com www.cyntler.com;
+
+  ssl_certificate /etc/letsencrypt/live/cyntler.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/cyntler.com/privkey.pem;
+
   root /usr/share/nginx/html;
+  index index.html;
 
   gzip on;
   gzip_types text/css application/javascript application/json image/svg+xml;
   gzip_comp_level 9;
   etag on;
-  
+
   location / {
     try_files $uri $uri/ /index.html;
   }
