--- a/nginx.conf
+++ b/nginx.conf
@@ -10,8 +10,8 @@ server {
   listen 443 ssl;
   server_name cyntler.com www.cyntler.com;
 
-  ssl_certificate /etc/letsencrypt/live/cyntler.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/cyntler.com/privkey.pem;
+  ssl_certificate /ssl/fullchain.pem;
+  ssl_certificate_key /ssl/privkey.pem;
 
   root /usr/share/nginx/html;
   index index.html;
