--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,35 @@
-server {
-  listen 80;
-  listen [::]:80;
-  server_name cyntler.com www.cyntler.com;
-
-  return 301 https://$host$request_uri;
+events {
+  worker_connections 1024;
 }
 
-server {
-  listen 443 ssl;
-  server_name cyntler.com www.cyntler.com;
+http {
 
-  ssl_certificate /ssl/fullchain.pem;
-  ssl_certificate_key /ssl/privkey.pem;
+  server {
+    listen 80;
+    listen [::]:80;
+    server_name cyntler.com www.cyntler.com;
 
-  root /usr/share/nginx/html;
-  index index.html;
-
-  gzip on;
-  gzip_types text/css application/javascript application/json image/svg+xml;
-  gzip_comp_level 9;
-  etag on;
-
-  location / {
-    try_files $uri $uri/ /index.html;
+    return 301 https://$host$request_uri;
   }
+
+  server {
+    listen 443 ssl;
+    server_name cyntler.com www.cyntler.com;
+
+    ssl_certificate /ssl/fullchain.pem;
+    ssl_certificate_key /ssl/privkey.pem;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    gzip on;
+    gzip_types text/css application/javascript application/json image/svg+xml;
+    gzip_comp_level 9;
+    etag on;
+
+    location / {
+      try_files $uri $uri/ /index.html;
+    }
+  }
+
 }
