--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -45,6 +45,6 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             cd /var/personal-frontend
-            docker build --no-cache -t personal-frontend .
-            docker rm personal-frontend
-            docker run -d -p 80:80 -p 443:443 -v /etc/letsencrypt/live/cyntler.com/fullchain.pem:/ssl/fullchain.pem -v /etc/letsencrypt/live/cyntler.com/privkey.pem:/ssl/privkey.pem personal-frontend
+            docker-compose stop
+            docker-compose rm
+            docker-compose up -d --build
