--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -46,5 +46,5 @@ jobs:
           script: |
             cd /var/personal-frontend
             docker-compose stop
-            docker-compose rm
+            docker-compose rm --force
             docker-compose up -d --build
