--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: '3'
 services:
-  personal-frontend:
+  app:
     build: .
-    container_name: personal-frontend
     volumes:
       - app-data:/app/dist
   http-server:
     depends_on:
-      - personal-frontend
+      - app
     image: nginx:alpine
-    container_name: http-server
-    ports:
-      - 80:80
-      - 443:443
+    environment:
+      - VIRTUAL_HOST=cyntler.com,www.cyntler.com
+    expose:
+      - 80
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/live/cyntler.com/fullchain.pem:/ssl/fullchain.pem
-      - /etc/letsencrypt/live/cyntler.com/privkey.pem:/ssl/privkey.pem
       - app-data:/usr/share/nginx/html
 volumes:
   app-data:
+networks:
+  default:
+    name: nginx-proxy
