--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,22 @@
 version: '3'
 
 services:
-  app:
+  application:
     build: .
+    container_name: personal-frontend
     volumes:
       - app-data:/app/dist
 
-  http-server:
-    depends_on:
-      - app
+  server:
     image: nginx:alpine
+    container_name: personal-frontend-server
+    depends_on:
+      - application
     environment:
-      - VIRTUAL_HOST=cyntler.com,www.cyntler.com
-      - VIRTUAL_PORT=80
-      - LETSENCRYPT_HOST=cyntler.com,www.cyntler.com
-      - LETSENCRYPT_EMAIL=damian@cyntler.com
+      VIRTUAL_HOST: 'cyntler.com,www.cyntler.com'
+      VIRTUAL_PORT: '80'
+      LETSENCRYPT_HOST: 'cyntler.com,www.cyntler.com'
+      LETSENCRYPT_EMAIL: 'damian@cyntler.com'
     expose:
       - 80
     volumes:
