--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react": "^17.0.2",
     "react-coming": "^1.0.3",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-icons": "^4.2.0",
     "react-intl": "^5.15.7",
     "react-router-dom": "^5.2.0",
